<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ereuse.scanner.activities.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/ereuse_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/emphasis_1"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <ScrollView
        android:id="@+id/scrollFormView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ereuse_toolbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleLabel"
                android:text="@string/form_title_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLabel"
                android:inputType="textMultiLine"
                android:id="@+id/titleEditText"
                android:gravity="left"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/devicesLabel"
                android:layout_below="@id/titleEditText"
                android:text="@string/form_devices_label" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/devicesLabel"
                android:id="@+id/devicesTableLayout"
                android:stretchColumns="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:layout_below="@id/devicesTableLayout"
                android:id="@+id/addDeviceButton"
                android:text="@string/form_add_device_button"
                android:background="@color/emphasis_2"
                android:textColor="@color/white"
                android:onClick="addDevice" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addDeviceButton"
                android:id="@+id/formReceiverEmailLabel"
                android:text="@string/form_receiver_email_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/formReceiverEmailLabel"
                android:inputType="textEmailAddress"
                android:id="@+id/formReceiverEmailEditText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/formReceiverEmailEditText"
                android:id="@+id/commentsLabel"
                android:text="@string/form_comments_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/commentsLabel"
                android:inputType="textMultiLine"
                android:id="@+id/commentsEditText"
                android:lines="3"
                android:gravity="left"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/commentsEditText"
                android:id="@+id/mapLabel"
                android:text="@string/form_map_label" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/mapLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/map"
                android:id="@+id/tv_location"
                android:text="@string/getting_device_location" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_location"
                android:text="@string/form_terms_and_conditions_label"
                android:id="@+id/formTermsAndConditionsCheckBox" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/formTermsAndConditionsCheckBox"
                android:id="@+id/formSendButton"
                android:text="@string/form_send_button"
                android:onClick="sendForm"
                android:background="@color/emphasis_2"
                android:textColor="@color/white"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/formRelaunchActivityFromNewPlace"
                android:checked="false"
                />

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/waiting_layout" />

</RelativeLayout>