...
        android:gravity="left"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <ScrollView
        android:id="@+id/scrollSnapshotView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ereuse_toolbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
...
                android:layout_alignParentRight="true"
                android:src="@drawable/scan"
                android:scaleType="centerInside"
                android:background="@color/zxing_transparent"
                android:onClick="scanSerialNumber"/>
            <EditText
                android:id="@+id/snapshotSerialNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/snapshotSerialNumberScanButton"
                android:layout_below="@id/snapshotSerialNumberLabel"
                android:inputType="text"
                android:textColor="@color/text" />
...
                android:layout_alignParentRight="true"
                android:src="@drawable/scan"
                android:scaleType="centerInside"
                android:background="@color/zxing_transparent"
                android:onClick="scanModel"/>
            <EditText
                android:id="@+id/snapshotModelEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/snapshotModelScanButton"
                android:layout_below="@id/snapshotModelLabel"
                android:inputType="text"
                android:textColor="@color/text" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/snapshotCommentsEditText"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_bottom_margin"
                android:id="@+id/sendSnapshotButton"
                android:text="@string/snapshot_send_button"
                android:onClick="sendSnapshot"
                android:textColor="@color/white"
                android:background="@color/emphasis_2"/>

        </RelativeLayout>
...
